--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <div class="ui icon header">
                             <i class="icon phphub"></i>PHPHub.org
                         </div>
-                        <p>PHPhub是积极向上的PHP开发者社区</p>
+                        <p>PHPhub 是积极向上的 PHP & Laravel 开发者社区</p>
                     </a>
                     <a class="column wow zoomIn" data-wow-delay="1.2s" href="#">
                         <div class="ui icon header">
