--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                             <a class="logo item wow rotateIn" data-wow-infinite data-wow-delay=".3s">The EST Group</a>
                             <div class="right menu c-a">
                                 <a class="active item wow fadeInRight" data-wow-delay=".8s" href="#">HOME</a>
-                                <a class="item wow fadeInRight" data-wow-delay="1s" href="page/about.html">ABOUT</a>
+                                <a class="item wow fadeInRight hide" data-wow-delay="1s" href="page/about.html">ABOUT</a>
                                 <a class="item wow fadeInRight" data-wow-delay="1.2s" href="#team">TEAM</a>
                                 <a class="item wow fadeInRight" data-wow-delay="1.4s" href="#contact">CONTACT</a>
                             </div>
@@ -51,23 +51,23 @@
                 </div>
 
                 <div class="row items c-black">
-                    <a class="column wow zoomIn" data-wow-delay="1s" href="#">
+                    <a class="column wow zoomIn" data-wow-delay="1s" href="https://phphub.org/" target="_blank">
                         <div class="ui icon header">
                             <i class="icon phphub"></i>PHPHub.org
                         </div>
-                        <p>PHPhub 是积极向上的 PHP & Laravel 开发者社区</p>
+                        <p>PHP & Laravel 开发者社区</p>
                     </a>
-                    <a class="column wow zoomIn" data-wow-delay="1.2s" href="#">
+                    <a class="column wow zoomIn" data-wow-delay="1.2s" href="https://github.com/phphub/" target="_blank">
                         <div class="ui icon header">
                             <i class="icon phphub-mobile"></i>PHPHub客户端
                         </div>
-                        <p>PHPhub是积极向上的PHP开发者社区</p>
+                        <p>iOS 和 Android 客户端（开源）</p>
                     </a>
-                    <a class="column wow zoomIn" data-wow-delay="1.4s" href="#">
+                    <a class="column wow zoomIn" data-wow-delay="1.4s" href="http://kouyujiaoer.com/" target="_blank">
                         <div class="ui icon header">
                             <i class="icon oralmaster"></i>口语角儿
                         </div>
-                        <p>口语角儿，拒绝哑巴英语，轻松练口语</p>
+                        <p>口语社交 App </p>
                     </a>
                 </div>
             </div>
@@ -76,7 +76,7 @@
 
     <div id="account" class="ui center aligned segment wrap account">
         <div class="c-mask">
-            <div class="ui page padded three column stackable grid">
+            <div class="ui page padded three column stackable centered grid">
                 <div class="centered row title">
                     <div class="eight wide column">
                         <h2 class="ui center aligned header wow fadeInLeft" data-wow-delay="1.6s">Social Account</h2>
@@ -85,23 +85,11 @@
                 </div>
 
                 <div class="row items c-black">
-                    <a class="column wow zoomIn" data-wow-delay="2.3s" href="#">
+                    <a class="column aligned wow zoomIn" data-wow-delay="2.3s" href="http://weibo.com/GitHubDaily" target="_blank">
                         <div class="ui icon header">
                             <i class="icon githubdaily"></i>GitHubDaily
                         </div>
-                        <p>专注于分享GitHub最新的优质开源项目</p>
-                    </a>
-                    <a class="column wow zoomIn" data-wow-delay="2.5s" href="#">
-                        <div class="ui icon header">
-                            <i class="icon githubdaily"></i>GitHubDaily
-                        </div>
-                        <p>专注于分享GitHub最新的优质开源项目</p>
-                    </a>
-                    <a class="column wow zoomIn" data-wow-delay="2.7s" href="#">
-                        <div class="ui icon header">
-                            <i class="icon githubdaily"></i>GitHubDaily
-                        </div>
-                        <p>专注于分享GitHub最新的优质开源项目</p>
+                        <p>每天分享 GitHub 优质开源项目</p>
                     </a>
                 </div>
             </div>
@@ -119,129 +107,129 @@
                 </div>
 
                 <div class="row items">
-                    <a class="column wow fadeInLeftBig" data-wow-delay="1s" href="page/zxx.html">
+                    <a class="column wow fadeInLeftBig" data-wow-delay="1s" href="javascript:;">
                         <div class="ui card column">
                             <div class="blurring dimmable image">
                                 <div class="ui dimmer">
                                     <div class="content">
                                         <div class="center">
-                                            <div class="ui inverted button">See More</div>
+                                            <div class="ui inverted button">偷看</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="avatar lgl"></div>
                             </div>
                             <div class="content">
-                                <div class="header">李桂龙</div>
-                                <div class="meta">Android开发工程师</div>
+                                <div class="header">Summer</div>
+                                <div class="meta">产品设计师</div>
                             </div>
                         </div>
                     </a>
-                    <a class="column wow fadeInLeftBig" data-wow-delay="1.2s" href="page/zxx.html">
+                    <a class="column wow fadeInLeftBig" data-wow-delay="1.2s" href="javascript:;">
                         <div class="ui card column">
                             <div class="blurring dimmable image">
                                 <div class="ui dimmer">
                                     <div class="content">
                                         <div class="center">
-                                            <div class="ui inverted button">See More</div>
+                                            <div class="ui inverted button">偷看</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="avatar zxx"></div>
                             </div>
                             <div class="content">
-                                <div class="header">张晓霞</div>
-                                <div class="meta">Android开发工程师</div>
+                                <div class="header">Connie</div>
+                                <div class="meta">安卓姐</div>
                             </div>
                         </div>
                     </a>
-                    <a class="column wow fadeInLeftBig" data-wow-delay="1.4s" href="page/zxx.html">
+                    <a class="column wow fadeInLeftBig" data-wow-delay="1.4s" href="javascript:;">
                         <div class="ui card column">
                             <div class="blurring dimmable image">
                                 <div class="ui dimmer">
                                     <div class="content">
                                         <div class="center">
-                                            <div class="ui inverted button">See More</div>
+                                            <div class="ui inverted button">偷看</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="avatar zjh"></div>
                             </div>
                             <div class="content">
-                                <div class="header">郑经铧</div>
-                                <div class="meta">Android开发工程师</div>
+                                <div class="header">Monkey</div>
+                                <div class="meta">Full Device 攻城师</div>
                             </div>
                         </div>
                     </a>
-                    <a class="column wow fadeInLeftBig" data-wow-delay="1.6s" href="page/zxx.html">
+                    <a class="column wow fadeInLeftBig" data-wow-delay="1.6s" href="javascript:;">
                         <div class="ui card column">
                             <div class="blurring dimmable image">
                                 <div class="ui dimmer">
                                     <div class="content">
                                         <div class="center">
-                                            <div class="ui inverted button">See More</div>
+                                            <div class="ui inverted button">偷看</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="avatar ljf"></div>
                             </div>
                             <div class="content">
-                                <div class="header">李锦发</div>
-                                <div class="meta">Android开发工程师</div>
+                                <div class="header">Aufree</div>
+                                <div class="meta">iOS 攻城师</div>
                             </div>
                         </div>
                     </a>
-                    <a class="column wow fadeInLeftBig" data-wow-delay="1.8s" href="page/zxx.html">
+                    <a class="column wow fadeInLeftBig" data-wow-delay="1.8s" href="javascript:;">
                         <div class="ui card column">
                             <div class="blurring dimmable image">
                                 <div class="ui dimmer">
                                     <div class="content">
                                         <div class="center">
-                                            <div class="ui inverted button">See More</div>
+                                            <div class="ui inverted button">偷看</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="avatar lxx"></div>
                             </div>
                             <div class="content">
-                                <div class="header">刘相轩</div>
-                                <div class="meta">Android开发工程师</div>
+                                <div class="header">Naux</div>
+                                <div class="meta">Server 攻城师</div>
                             </div>
                         </div>
                     </a>
-                    <a class="column wow fadeInLeftBig" data-wow-delay="2s" href="page/zxx.html">
+                    <a class="column wow fadeInLeftBig" data-wow-delay="2s" href="javascript:;">
                         <div class="ui card column">
                             <div class="blurring dimmable image">
                                 <div class="ui dimmer">
                                     <div class="content">
                                         <div class="center">
-                                            <div class="ui inverted button">See More</div>
+                                            <div class="ui inverted button">偷看</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="avatar zh"></div>
                             </div>
                             <div class="content">
-                                <div class="header">钟航</div>
-                                <div class="meta">Android开发工程师</div>
+                                <div class="header">Kelvin</div>
+                                <div class="meta">安卓哥</div>
                             </div>
                         </div>
                     </a>
-                    <a class="column wow fadeInLeftBig" data-wow-delay="2.2s" href="page/zxx.html">
+                    <a class="column wow fadeInLeftBig" data-wow-delay="2.2s" href="javascript:;">
                         <div class="ui card column">
                             <div class="blurring dimmable image">
                                 <div class="ui dimmer">
                                     <div class="content">
                                         <div class="center">
-                                            <div class="ui inverted button">See More</div>
+                                            <div class="ui inverted button">偷看</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="avatar pym"></div>
                             </div>
                             <div class="content">
-                                <div class="header">蒲元敏</div>
-                                <div class="meta">Android开发工程师</div>
+                                <div class="header">Moamaoa</div>
+                                <div class="meta">Front End 攻城师</div>
                             </div>
                         </div>
                     </a>
@@ -261,14 +249,8 @@
                 </div>
 
                 <div class="row items">
-                    <a class="column aligned wow fadeInUp" data-wow-delay="1s" href="#">
+                    <a class="column aligned wow fadeInUp" data-wow-delay="1s" href="mailto:cj@est-group.org">
                         <i class="big outline mail circular icon grey"></i>
-                    </a>
-                    <a class="column aligned wow fadeInUp" data-wow-delay="1.2s" href="#">
-                        <i class="big weibo circular icon grey"></i>
-                    </a>
-                    <a class="column aligned wow fadeInUp" data-wow-delay="1.4s" href="#">
-                        <i class="big facebook circular icon grey"></i>
                     </a>
                 </div>
             </div>
