--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                 <div class="ui dimmer">
                                     <div class="content">
                                         <div class="center">
-                                            <div class="ui inverted button">偷看</div>
+                                            <div class="ui inverted button">个人信息</div>
                                         </div>
                                     </div>
                                 </div>
@@ -131,7 +131,7 @@
                                 <div class="ui dimmer">
                                     <div class="content">
                                         <div class="center">
-                                            <div class="ui inverted button">偷看</div>
+                                            <div class="ui inverted button">个人信息</div>
                                         </div>
                                     </div>
                                 </div>
@@ -139,7 +139,7 @@
                             </div>
                             <div class="content">
                                 <div class="header">Connie</div>
-                                <div class="meta">安卓姐</div>
+                                <div class="meta">全栈程序猿</div>
                             </div>
                         </div>
                     </a>
@@ -149,7 +149,7 @@
                                 <div class="ui dimmer">
                                     <div class="content">
                                         <div class="center">
-                                            <div class="ui inverted button">偷看</div>
+                                            <div class="ui inverted button">个人信息</div>
                                         </div>
                                     </div>
                                 </div>
@@ -167,7 +167,7 @@
                                 <div class="ui dimmer">
                                     <div class="content">
                                         <div class="center">
-                                            <div class="ui inverted button">偷看</div>
+                                            <div class="ui inverted button">个人信息</div>
                                         </div>
                                     </div>
                                 </div>
@@ -185,7 +185,7 @@
                                 <div class="ui dimmer">
                                     <div class="content">
                                         <div class="center">
-                                            <div class="ui inverted button">偷看</div>
+                                            <div class="ui inverted button">个人信息</div>
                                         </div>
                                     </div>
                                 </div>
@@ -203,7 +203,7 @@
                                 <div class="ui dimmer">
                                     <div class="content">
                                         <div class="center">
-                                            <div class="ui inverted button">偷看</div>
+                                            <div class="ui inverted button">个人信息</div>
                                         </div>
                                     </div>
                                 </div>
@@ -221,7 +221,7 @@
                                 <div class="ui dimmer">
                                     <div class="content">
                                         <div class="center">
-                                            <div class="ui inverted button">偷看</div>
+                                            <div class="ui inverted button">个人信息</div>
                                         </div>
                                     </div>
                                 </div>
