add typing effect

--- a/index.html
+++ b/index.html
@@ -29,8 +29,16 @@
                     <div class="ui middle aligned padded grid flex">
                         <div class="row">
                             <div class="info column">
-                                <h1 class="ui inverted header wow fadeInLeft" data-wow-delay="1s">The EST Group</h1>
-                                <p class="wow fadeInRight" data-wow-delay="1.2s">We always building something!</p>
+                                <h1 class="ui inverted header ">The EST Group</h1>
+                                <p id="i-wanna-say" style="
+    background-color: #060606;
+    border-radius: 8px;
+    padding: 10px;
+    text-align: left;
+    padding-left: 40px;
+    width: 550px;
+    margin: 20px auto;
+"></p>
                             </div>
                         </div>
                     </div>
@@ -286,6 +294,7 @@
     <script src="js/headroom.min.js"></script>
     <script src="semantic-ui/semantic.min.js"></script>
     <script src="js/wow.min.js"></script>
+    <script src="js/theater.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
