--- a/index.html
+++ b/index.html
@@ -30,15 +30,7 @@
                         <div class="row">
                             <div class="info column">
                                 <h1 class="ui inverted header ">The EST Group</h1>
-                                <p id="i-wanna-say" style="
-    background-color: #060606;
-    border-radius: 8px;
-    padding: 10px;
-    text-align: left;
-    padding-left: 40px;
-    width: 550px;
-    margin: 20px auto;
-"></p>
+                                <p id="i-wanna-say"></p>
                             </div>
                         </div>
                     </div>
