change contact us

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <div class="ui page padded four column centered grid">
                 <div class="centered row title">
                     <div class="eight wide column">
-                        <h2 class="ui center aligned header wow fadeInLeft" data-wow-delay=".3s">Get in touch</h2>
+                        <h2 class="ui center aligned header wow fadeInLeft" data-wow-delay=".3s">Contact Us:</h2>
                         <p class="ui horizontal divider wow fadeInRight" data-wow-delay=".5s"><i class="send icon"></i></p>
                     </div>
                 </div>
