--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-    <title>The EST Group - We always building something!</title>
+    <title>The EST Group - We design and build: the Feature, Baby!</title>
     <link rel="icon" href="img/favicon.png">
     <link rel="stylesheet" href="semantic-ui/semantic.min.css">
     <link rel="stylesheet" href="css/animate.min.css">
