--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 </div>
 
                 <div class="row items">
-                    <a class="column wow fadeInLeftBig" data-wow-delay="1s" href="javascript:;">
+                    <a class="column wow fadeInLeftBig" data-wow-delay="1s" href="https://github.com/summerblue" target="_blank">
                         <div class="ui card column">
                             <div class="blurring dimmable image">
                                 <div class="ui dimmer">
@@ -166,7 +166,7 @@
                             </div>
                         </div>
                     </a>
-                    <a class="column wow fadeInLeftBig" data-wow-delay="1.2s" href="javascript:;">
+                    <a class="column wow fadeInLeftBig" data-wow-delay="1.2s" href="https://github.com/xiaoxiaoyu" target="_blank">
                         <div class="ui card column">
                             <div class="blurring dimmable image">
                                 <div class="ui dimmer">
@@ -184,7 +184,7 @@
                             </div>
                         </div>
                     </a>
-                    <a class="column wow fadeInLeftBig" data-wow-delay="1.4s" href="javascript:;">
+                    <a class="column wow fadeInLeftBig" data-wow-delay="1.4s" href="https://github.com/zhengjinghua" target="_blank">
                         <div class="ui card column">
                             <div class="blurring dimmable image">
                                 <div class="ui dimmer">
@@ -202,7 +202,7 @@
                             </div>
                         </div>
                     </a>
-                    <a class="column wow fadeInLeftBig" data-wow-delay="1.6s" href="javascript:;">
+                    <a class="column wow fadeInLeftBig" data-wow-delay="1.6s" href="https://github.com/Aufree" target="_blank">
                         <div class="ui card column">
                             <div class="blurring dimmable image">
                                 <div class="ui dimmer">
@@ -220,7 +220,7 @@
                             </div>
                         </div>
                     </a>
-                    <a class="column wow fadeInLeftBig" data-wow-delay="1.8s" href="javascript:;">
+                    <a class="column wow fadeInLeftBig" data-wow-delay="1.8s" href="https://github.com/NauxLiu" target="_blank">
                         <div class="ui card column">
                             <div class="blurring dimmable image">
                                 <div class="ui dimmer">
@@ -238,7 +238,7 @@
                             </div>
                         </div>
                     </a>
-                    <a class="column wow fadeInLeftBig" data-wow-delay="2s" href="javascript:;">
+                    <a class="column wow fadeInLeftBig" data-wow-delay="2s" href="https://github.com/CycloneAxe" target="_blank">
                         <div class="ui card column">
                             <div class="blurring dimmable image">
                                 <div class="ui dimmer">
@@ -256,7 +256,7 @@
                             </div>
                         </div>
                     </a>
-                    <a class="column wow fadeInLeftBig" data-wow-delay="2.2s" href="javascript:;">
+                    <a class="column wow fadeInLeftBig" data-wow-delay="2.2s" href="https://github.com/moamaoa" target="_blank">
                         <div class="ui card column">
                             <div class="blurring dimmable image">
                                 <div class="ui dimmer">
