--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
         </div>
 
-<a href="https://github.com/moamaoa/the-est-group-website"><img style="position: absolute; top: 0; right: 0; border: 0;display:block;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
+<a href="https://github.com/moamaoa/the-est-group-website" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;display:block;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
     </div>
 
     <div id="built" class="ui center aligned segment wrap built">
@@ -331,5 +331,16 @@
     <script src="js/wow.min.js"></script>
     <script src="js/theater.min.js"></script>
     <script src="js/main.js"></script>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','http://7xijlf.com2.z0.glb.qiniucdn.com/js/analytics.js','ga');
+
+      ga('create', 'UA-70965318-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 </body>
 </html>
