remove icp verification page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,347 @@
-<h1>Not Found. Resolve Domain Error.</h1>
+<!--
+░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░░░░░░░▓████████████████████████▒░░░░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░░░░▓█████▓▒░░░░░░░░░░░░░░░▒██████▒░░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░░████▒░░░░░░░░░░░░░░░░░░░░░░░░░▓███▒░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░███░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░███░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░▒██░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▒██░░░░░░░░░░░░░░
+░░░░░░░░░░░░▒██░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░██░░░░░░░░░░░░░
+░░░░░░░░░░░░██░░░░░░░░░░░ Created by Moamaoa ░░░░░░░░██░░░░░░░░░░░░
+░░░░░░░░░░░██▓░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▒░░██░░░░░░░░░░░░
+░░░░░░░░░░░██░░██░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░██░░██░░░░░░░░░░░
+░░░░░░░░░░░██░░██░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░██░░██░░░░░░░░░░░
+░░░░░░░░░░░██░░██░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░██░░██░░░░░░░░░░░
+░░░░░░░░░░░██▒░██▓░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░██▓░▒██░░░░░░░░░░░
+░░░░░░░░░░░░██░░██░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░██░░██░░░░░░░░░░░░
+░░░░░░░░░░░░██▒░██░░░░░▒▒▓███▒░░░░░░░▒███▓▒▒░░░░░██░▓██░░░░░░░░░░░░
+░░░░░░░░░░░░░██░██░░██████████▒░░░░░▓██████████░░██▒██░░░░░░░░░░░░░
+░░░░░░░░░░░░░░████░████████████░░░░░████████████░████░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░███░▒██████████░░░░░░░██████████▒░██▒░░░░░░░░░▒░░░░░
+░░░▒████░░░░░░░▓█▒░░█████████░░░░░░░░░█████████░░▒█▓░░░░░░▓████░░░░
+░░░██░▒██▒░░░░░██░░░░██████▓░░░░█░█░░░░███████░░░░██░░░░░███░░██░░░
+░░░██░░░██▓░░░░██░░░░░░▒▓▓░░░░▒██░██░░░░░▓▓▒░░░░░▒██░░░░███░░░██░░░
+░▓██▒░░░░████▓░░██░░░░░░░░░░░░███░███░░░░░░░░░░░░██░░█████░░░░▓██▒░
+██▓░░░░░░░░▒████████▓░░░░░░░░████░███▓░░░░░░░▒▓████████░░░░░░░░░███
+██▓▒▓███▓░░░░░░▓████████▓░░░░████░███▓░░░░▓████████▓░░░░░░████▓▓███
+░███████████▒░░░░░░███████░░░░██░░░██░░░░██████▓░░░░░░▓███████████░
+░░░░░░░░░░▓█████░░░░██▓▓░██░░░░░░░░░░░░░██░█▒██░░░▒█████▓░░░░░░░░░░
+░░░░░░░░░░░░░▒█████▒▒█▓█░███▓▓▒▒▒▓▒▒▓▓▓███▒███░▓█████░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░░░▒████▒▓█▒▒█░█▒█░█░█▓█▒█▓░█░█████▒░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░░░░░░██░░██▓█▓█▓█▒█▒█▓█▓████░▓█▓░░░░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░░░▓████▓░▓█▓█░█▒█░█░█▒█▒███▒░██████░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░▓█████░░██░░░▒█████▓█▓█████▒░░░██░▒█████▓░░░░░░░░░░░░░
+░░░░▒██████████▓░░░░░███░░░░░░░░░░░░░░░░░░░██▒░░░░░▓██████████▒░░░░
+░░░░██░░░▓▓▓░░░░░░▒██████▓░░░░░░░░░░░░░░░███████▒░░░░░░▓▓▒░░▒██░░░░
+░░░░▓██░░░░░░░░▓████▓░░░█████▒░░░░░░▒▓█████░░░▓████▓░░░░░░░▒██▓░░░░
+░░░░░░███░░░░████▒░░░░░░░░▓█████████████▒░░░░░░░░▒████░░░░███░░░░░░
+░░░░░░░██░░░██▒░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▓██░░░██░░░░░░░
+░░░░░░░██▒▓██░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▒██▒▓██░░░░░░░
+░░░░░░░░████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░████░░░░░░░░
+░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+ -->
+<!DOCTYPE html>
+<html id="est" lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+    <title>The EST Group - We design and build: the Future, Baby!</title>
+    <link rel="icon" href="img/favicon.png">
+    <link rel="stylesheet" href="semantic-ui/semantic.min.css">
+    <link rel="stylesheet" href="css/animate.min.css">
+    <link rel="stylesheet" href="css/main.css">
+</head>
+<body>
+    <div id="head" class="ui inverted center aligned segment wrap head">
+        <div class="c-mask">
+            <div class="ui page padded grid">
+                <div class="column">
+                    <div class="ui inverted secondary pointing menu headroom">
+                        <div class="ui page padded grid">
+                            <a class="logo item wow rotateIn" data-wow-infinite data-wow-delay=".3s">The EST Group</a>
+                            <div class="right menu c-a">
+                                <a class="active item wow fadeInRight" data-wow-delay=".8s" href="#">HOME</a>
+                                <a class="item wow fadeInRight hide" data-wow-delay="1s" href="page/about.html">ABOUT</a>
+                                <a class="item wow fadeInRight" data-wow-delay="1.2s" href="#team">TEAM</a>
+                                <a class="item wow fadeInRight" data-wow-delay="1.4s" href="#contact">CONTACT</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ui middle aligned padded grid flex">
+                        <div class="row">
+                            <div class="info column">
+                                <h1 class="ui inverted header ">The EST Group</h1>
+                                <p id="i-wanna-say"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <p class="wow fadeInUp arrow" data-wow-delay="1.7s"><a class="c-white" href="#built"><i class="circular angle down small icon"></i></a></p>
+                </div>
+            </div>
+        </div>
+
+<a class="fork" href="https://github.com/moamaoa/the-est-group-website" target="_blank"><img style="position: absolute; z-index: 100; top: 0; right: 0; border: 0;display:block;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
+    </div>
+
+    <div id="built" class="ui center aligned segment wrap built">
+        <div class="c-mask">
+            <div class="ui page padded three column stackable grid">
+                <div class="centered row title">
+                    <div class="eight wide column">
+                        <h2 class="ui header center aligned wow fadeInLeft" data-wow-delay=".3s">This is what we built</h2>
+                        <p class="ui horizontal divider wow fadeInRight" data-wow-delay=".5s"><i class="legal icon"></i></p>
+                    </div>
+                </div>
+
+                <div class="row items c-black">
+                    <a class="column wow zoomIn" data-wow-delay="1s" href="https://phphub.org/" target="_blank">
+                        <div class="ui icon header">
+                            <i class="icon phphub"></i>PHPHub.org
+                        </div>
+                        <p>PHP & Laravel 开发者社区</p>
+                    </a>
+                    <a class="column wow zoomIn" data-wow-delay="1.2s" href="https://github.com/phphub/" target="_blank">
+                        <div class="ui icon header">
+                            <i class="icon phphub-mobile"></i>PHPHub客户端
+                        </div>
+                        <p>iOS 和 Android 客户端（开源）</p>
+                    </a>
+                    <a class="column wow zoomIn" data-wow-delay="1.4s" href="http://kouyujiaoer.com/" target="_blank">
+                        <div class="ui icon header">
+                            <i class="icon oralmaster"></i>口语角儿
+                        </div>
+                        <p>口语社交 App </p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="account" class="ui center aligned segment wrap account">
+        <div class="c-mask">
+            <div class="ui page padded three column stackable centered grid">
+                <div class="centered row title">
+                    <div class="eight wide column">
+                        <h2 class="ui center aligned header wow fadeInLeft" data-wow-delay="1.6s">Social Account</h2>
+                        <p class="ui horizontal divider wow fadeInRight" data-wow-delay="1.8s"><i class="coffee icon"></i></p>
+                    </div>
+                </div>
+
+                <div class="row items c-black">
+                    <a class="column aligned wow zoomIn" data-wow-delay="2.3s" href="http://weibo.com/GitHubDaily" target="_blank">
+                        <div class="ui icon header">
+                            <i class="icon githubdaily"></i>GitHubDaily
+                        </div>
+                        <p>每天分享 GitHub 优质开源项目</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="team" class="ui segment wrap team">
+        <div class="c-mask">
+            <div class="ui page padded four column doubling grid">
+                <div class="centered row title">
+                    <div class="eight wide column">
+                        <h2 class="ui inverted center aligned header wow fadeInLeft" data-wow-delay=".3s">Team Member</h2>
+                        <p class="ui inverted horizontal divider wow fadeInRight" data-wow-delay=".5s"><i class="users icon"></i></p>
+                    </div>
+                </div>
+
+                <div class="row items">
+                    <a class="column wow fadeInLeftBig" data-wow-delay="1s" href="https://github.com/summerblue" target="_blank">
+                        <div class="ui card column">
+                            <div class="blurring dimmable image">
+                                <div class="ui dimmer">
+                                    <div class="content">
+                                        <div class="center">
+                                            <div class="ui inverted button">个人信息</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="avatar lgl"></div>
+                            </div>
+                            <div class="content">
+                                <div class="header">Summer</div>
+                                <div class="meta">产品设计师</div>
+                            </div>
+                        </div>
+                    </a>
+                    <a class="column wow fadeInLeftBig" data-wow-delay="1.2s" href="https://github.com/xiaoxiaoyu" target="_blank">
+                        <div class="ui card column">
+                            <div class="blurring dimmable image">
+                                <div class="ui dimmer">
+                                    <div class="content">
+                                        <div class="center">
+                                            <div class="ui inverted button">个人信息</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="avatar zxx"></div>
+                            </div>
+                            <div class="content">
+                                <div class="header">Connie</div>
+                                <div class="meta">全栈程序猿</div>
+                            </div>
+                        </div>
+                    </a>
+                    <a class="column wow fadeInLeftBig" data-wow-delay="1.4s" href="https://github.com/zhengjinghua" target="_blank">
+                        <div class="ui card column">
+                            <div class="blurring dimmable image">
+                                <div class="ui dimmer">
+                                    <div class="content">
+                                        <div class="center">
+                                            <div class="ui inverted button">个人信息</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="avatar zjh"></div>
+                            </div>
+                            <div class="content">
+                                <div class="header">Monkey</div>
+                                <div class="meta">Full Device 攻城师</div>
+                            </div>
+                        </div>
+                    </a>
+                    <a class="column wow fadeInLeftBig" data-wow-delay="1.6s" href="https://github.com/Aufree" target="_blank">
+                        <div class="ui card column">
+                            <div class="blurring dimmable image">
+                                <div class="ui dimmer">
+                                    <div class="content">
+                                        <div class="center">
+                                            <div class="ui inverted button">个人信息</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="avatar ljf"></div>
+                            </div>
+                            <div class="content">
+                                <div class="header">Aufree</div>
+                                <div class="meta">iOS 攻城师</div>
+                            </div>
+                        </div>
+                    </a>
+                    <a class="column wow fadeInLeftBig" data-wow-delay="1.8s" href="https://github.com/NauxLiu" target="_blank">
+                        <div class="ui card column">
+                            <div class="blurring dimmable image">
+                                <div class="ui dimmer">
+                                    <div class="content">
+                                        <div class="center">
+                                            <div class="ui inverted button">个人信息</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="avatar lxx"></div>
+                            </div>
+                            <div class="content">
+                                <div class="header">Naux</div>
+                                <div class="meta">Server 攻城师</div>
+                            </div>
+                        </div>
+                    </a>
+                    <a class="column wow fadeInLeftBig" data-wow-delay="2s" href="https://github.com/CycloneAxe" target="_blank">
+                        <div class="ui card column">
+                            <div class="blurring dimmable image">
+                                <div class="ui dimmer">
+                                    <div class="content">
+                                        <div class="center">
+                                            <div class="ui inverted button">个人信息</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="avatar zh"></div>
+                            </div>
+                            <div class="content">
+                                <div class="header">Kelvin</div>
+                                <div class="meta">安卓哥</div>
+                            </div>
+                        </div>
+                    </a>
+                    <a class="column wow fadeInLeftBig" data-wow-delay="2.2s" href="https://github.com/moamaoa" target="_blank">
+                        <div class="ui card column">
+                            <div class="blurring dimmable image">
+                                <div class="ui dimmer">
+                                    <div class="content">
+                                        <div class="center">
+                                            <div class="ui inverted button">个人信息</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="avatar pym"></div>
+                            </div>
+                            <div class="content">
+                                <div class="header">Moamaoa</div>
+                                <div class="meta">Front End 攻城师</div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="contact" class="ui segment wrap contact">
+        <div class="c-mask">
+            <div class="ui page padded four column centered grid">
+                <div class="centered row title">
+                    <div class="eight wide column">
+                        <h2 class="ui center aligned header wow fadeInLeft" data-wow-delay=".3s">Contact Us:</h2>
+                        <p class="ui horizontal divider wow fadeInRight" data-wow-delay=".5s"><i class="send icon"></i></p>
+                    </div>
+                </div>
+
+                <div class="row items">
+                    <a class="column aligned wow fadeInUp" data-wow-delay="1s" href="mailto:cj@est-group.org">
+                        <i class="big outline mail circular icon grey"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="footer" class="ui inverted center aligned segment wrap footer">
+        <div class="c-mask">
+            <div class="ui page padded grid">
+                <div class="column">
+                    <p class="wow fadeInLeft" data-wow-delay="1.6s"><a class="c-white" href="#head"><i class="circular angle up icon"></i></a></p>
+                    <p class="wow fadeInRight" data-wow-delay="1.8s">Made with <i class="red heart icon animated zoomIn infinite"></i> by The EST Group</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="ui active dimmer c-mask">
+        <div class="content">
+            <div class="center">
+                <div class="sk-folding-cube">
+                    <div class="sk-cube1 sk-cube"></div>
+                    <div class="sk-cube2 sk-cube"></div>
+                    <div class="sk-cube4 sk-cube"></div>
+                    <div class="sk-cube3 sk-cube"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/jquery.smooth-scroll.min.js"></script>
+    <script src="js/headroom.min.js"></script>
+    <script src="semantic-ui/semantic.min.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script src="js/theater.min.js"></script>
+    <script src="js/main.js"></script>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','http://7xijlf.com2.z0.glb.qiniucdn.com/js/analytics.js','ga');
+
+      ga('create', 'UA-70965318-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+</body>
+</html>
+
